# GalaxiC

./: CMakeLists.txt  LICENSE  README.md  line_counter.py  test.gx  todo.txt
src/: Arena.h  Assemble.cpp  Assemble.h  Core.h  Generator.cpp  Generator.h  Labels.h  Log.h  Node.h  PCH.h  Parser.cpp  Parser.h  Storage.cpp  Storage.h  Token.h  Tokenizer.cpp  Tokenizer.h  Variable.h  generation_rules.md  main.cpp
